--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -120,8 +120,9 @@ h3{
     display: block;
 }
 .bio-text{
+    width: 100%;
     font-size: 1.5rem;
-    padding-left: 0;
+    padding-left: 1rem;;
 
 }
 .avatar{
