--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -122,7 +122,8 @@ h3{
 .bio-text{
     width: 100%;
     font-size: 1.5rem;
-    padding-left: 2rem;;
+    padding-left: 2rem;
+    text-align: center;
 
 }
 .avatar{
